Обновил локализацию в HTML и JSON файлах, добавил новые отзывы на английском и грузинском языках, улучшил структуру разметки для поддержки i18n и добавил атрибуты для локализации в index.html.

--- a/i18n/ka/src/index.html
+++ b/i18n/ka/src/index.html
@@ -260,12 +260,7 @@
                                 <div class="user_rating">⭐⭐⭐⭐⭐</div>
                             </div>
                         </div>
-                        Отличный сервис! Нужно было выполнить разные виды работ по машине -
-                        проверить выхлопную, ремень генератора, поднять койловеры в подвеске, а так же выяснить причину
-                        запаха бензина снаружи и в салоне. Вежливо и оперативно подобрали время приема, разобрались в
-                        проблемах и заодно смотрели на прочие моменты по пути, всегда были на связи, помогли с поиском,
-                        выбором и покупкой запчастей. Все проблемы по итогу решены, оперативно и без спешки - спасибо
-                        большое! Буду обращаться еще
+                        <span>შესანიშნავი სერვისი! მანქანაზე სხვადასხვა სახის სამუშაოების შესრულება დაგვჭირდა - გამონაბოლქვის შემოწმება, გენერატორის ღვედი, საკიდების კოილოვერების რეგულირება და ასევე ბენზინის სუნის მიზეზის გარკვევა გარეთ და სალონში. მოწესრიგებულად და სწრაფად შევთანხმდით მიღების დროს, გავარკვიეთ პრობლემები და ასევე გადავხედეთ სხვა საკითხებს, ყოველთვის ვიყავით კონტაქტში, დაგვეხმარნენ ნაწილების ძიებაში, არჩევაში და შეძენაში. ყველა პრობლემა საბოლოოდ მოგვარდა, სწრაფად და ჩქარობის გარეშე - დიდი მადლობა! კვლავ დაგიკავშირდებით</span>
                     </div>
                     <div class="swiper-slide">
                         <div class="user">
@@ -275,9 +270,7 @@
                                 <div class="user_rating">⭐⭐⭐⭐⭐</div>
                             </div>
                         </div>
-                        Отличный сервис, по записи, мастер Александр профи, всё хорошо объясняет
-                        по ходу ремонта и быстро делает. Обслуживал ходовую и тормоза, спектр работ широкий. Рекомендую
-                        🤟
+                        <span>შესანიშნავი სერვისი, ჩაწერით, ოსტატი ალექსანდრე პროფესიონალია, ყველაფერს კარგად ხსნის რემონტის დროს და სწრაფად მუშაობს. მოემსახურა ქვედა ნაწილს და მუხრუჭებს, სამუშაოების ფართო სპექტრი. გირჩევთ 🤟</span>
                     </div>
                     <div class="swiper-slide">
                         <div class="user">
@@ -287,12 +280,7 @@
                                 <div class="user_rating">⭐⭐⭐⭐⭐</div>
                             </div>
                         </div>
-                        Хороший сервис: все чисто, просторно, нету такого, что одна машина
-                        на
-                        другой. Записался через W/A.
-                        Записывался на замену масла к Ивану (мастер). Все сделал быстро, качественно. Параллельно
-                        обсудили состояние передних рычагов подвески и другие вопросы по авто.
-                        Обслуживание на 5+.
+                        <span>კარგი სერვისი: ყველაფერი სუფთაა, ფართო, არ არის ისეთი, რომ ერთი მანქანა მეორეზე დგას. W/A-ით დავწერე. ზეთის შეცვლაზე ივანესთან (ოსტატი) დავწერე. ყველაფერი სწრაფად და ხარისხიანად გაკეთდა. პარალელურად განვიხილეთ წინა საკიდების მდგომარეობა და სხვა საკითხები მანქანაზე. მომსახურება 5+.</span>
                     </div>
                     <div class="swiper-slide">
                         <div class="user">
@@ -302,29 +290,17 @@
                                 <div class="user_rating">⭐⭐⭐⭐⭐</div>
                             </div>
                         </div>
-                        Профессионалы своего дела!
-
-                        Качественное,последовательное исполнение ,с фотоотчетом на всех этапах))
-                        Так же хочу отметить что работы выполнились в раньший срок чем обещали,посредством того что
-                        уделили этому больше времени чем указано в часах работы автосервиса
-
-                        Отличная ,организованная работа на всех этапах
-
-                        Благодарю
-
-                        Всем рекомендую!
+                        <span>პროფესიონალები თავიანთ სფეროში! ხარისხიანი, თანმიმდევრული შესრულება, ფოტოანგარიშებით ყველა ეტაპზე)) ასევე მინდა აღვნიშნო, რომ სამუშაოები დასრულდა ვადაზე ადრე, მასზე მეტი დროის დათმობით, ვიდრე მითითებულია სერვისის სამუშაო საათებში. შესანიშნავი, ორგანიზებული მუშაობა ყველა ეტაპზე. მადლობა. ყველას გირჩევთ!</span>
                     </div>
                     <div class="swiper-slide">
                         <div class="user">
                             <img class="user_avatar" src="..\../../img/alexander_sobolev.png" alt>
                             <div>
-                                <h4 class="user_name ">Alexander Sobolev</h4>
+                                <h4 class="user_name">Alexander Sobolev</h4>
                                 <div class="user_rating">⭐⭐⭐⭐⭐</div>
                             </div>
                         </div>
-                        После России было страшно заезжать в автосервисы в Батуми, сильно не
-                        внушали доверия. Чудом нашёл этот сервис, работают парни из России, делают всё спокойно,
-                        рассудительно, мне нравится.
+                        <span>რუსეთიდან შემდეგ ბათუმში ავტოსერვისებში შესვლა საშიში იყო, დიდად არ იწვევდნენ ნდობას. შემთხვევით ვიპოვე ეს სერვისი, რუსეთიდან ბიჭები მუშაობენ, ყველაფერს მშვიდად, გონივრულად აკეთებენ, მომწონს.</span>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
