--- a/i18n/en/src/index.html
+++ b/i18n/en/src/index.html
@@ -260,12 +260,7 @@
                                 <div class="user_rating">⭐⭐⭐⭐⭐</div>
                             </div>
                         </div>
-                        Отличный сервис! Нужно было выполнить разные виды работ по машине -
-                        проверить выхлопную, ремень генератора, поднять койловеры в подвеске, а так же выяснить причину
-                        запаха бензина снаружи и в салоне. Вежливо и оперативно подобрали время приема, разобрались в
-                        проблемах и заодно смотрели на прочие моменты по пути, всегда были на связи, помогли с поиском,
-                        выбором и покупкой запчастей. Все проблемы по итогу решены, оперативно и без спешки - спасибо
-                        большое! Буду обращаться еще
+                        <span>Excellent service! We needed to perform various types of work on the car - check the exhaust, alternator belt, adjust coilovers in the suspension, and also find out the cause of the gasoline smell outside and inside. They politely and quickly arranged an appointment time, figured out the problems and also looked at other issues along the way, were always in touch, helped with finding, choosing and purchasing parts. All problems were solved in the end, quickly and without rush - thank you very much! I will contact you again</span>
                     </div>
                     <div class="swiper-slide">
                         <div class="user">
@@ -275,9 +270,7 @@
                                 <div class="user_rating">⭐⭐⭐⭐⭐</div>
                             </div>
                         </div>
-                        Отличный сервис, по записи, мастер Александр профи, всё хорошо объясняет
-                        по ходу ремонта и быстро делает. Обслуживал ходовую и тормоза, спектр работ широкий. Рекомендую
-                        🤟
+                        <span>Excellent service, by appointment, master Alexander is a pro, explains everything well during the repair and works quickly. Serviced the chassis and brakes, wide range of work. I recommend 🤟</span>
                     </div>
                     <div class="swiper-slide">
                         <div class="user">
@@ -287,12 +280,7 @@
                                 <div class="user_rating">⭐⭐⭐⭐⭐</div>
                             </div>
                         </div>
-                        Хороший сервис: все чисто, просторно, нету такого, что одна машина
-                        на
-                        другой. Записался через W/A.
-                        Записывался на замену масла к Ивану (мастер). Все сделал быстро, качественно. Параллельно
-                        обсудили состояние передних рычагов подвески и другие вопросы по авто.
-                        Обслуживание на 5+.
+                        <span>Good service: everything is clean, spacious, no cars stacked on top of each other. Booked through W/A. Booked for oil change with Ivan (master). Everything was done quickly and efficiently. In parallel, we discussed the condition of the front suspension arms and other car issues. Service is 5+.</span>
                     </div>
                     <div class="swiper-slide">
                         <div class="user">
@@ -302,29 +290,17 @@
                                 <div class="user_rating">⭐⭐⭐⭐⭐</div>
                             </div>
                         </div>
-                        Профессионалы своего дела!
-
-                        Качественное,последовательное исполнение ,с фотоотчетом на всех этапах))
-                        Так же хочу отметить что работы выполнились в раньший срок чем обещали,посредством того что
-                        уделили этому больше времени чем указано в часах работы автосервиса
-
-                        Отличная ,организованная работа на всех этапах
-
-                        Благодарю
-
-                        Всем рекомендую!
+                        <span>Professionals in their field! Quality, consistent execution, with photo reports at all stages)) I would also like to note that the work was completed earlier than promised, by dedicating more time to it than indicated in the service center's working hours. Excellent, organized work at all stages. Thank you. I recommend to everyone!</span>
                     </div>
                     <div class="swiper-slide">
                         <div class="user">
                             <img class="user_avatar" src="..\../../img/alexander_sobolev.png" alt>
                             <div>
-                                <h4 class="user_name ">Alexander Sobolev</h4>
+                                <h4 class="user_name">Alexander Sobolev</h4>
                                 <div class="user_rating">⭐⭐⭐⭐⭐</div>
                             </div>
                         </div>
-                        После России было страшно заезжать в автосервисы в Батуми, сильно не
-                        внушали доверия. Чудом нашёл этот сервис, работают парни из России, делают всё спокойно,
-                        рассудительно, мне нравится.
+                        <span>After Russia, I was afraid to go to auto services in Batumi, they didn't inspire much confidence. By chance I found this service, guys from Russia work here, they do everything calmly, thoughtfully, I like it.</span>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
