Обновил текстовые строки в HTML и JSON файлах для улучшения локализации, добавил пробелы перед символом "☆" и уточнил описание услуг, таких как "3 подъёмника" и "Пресс до 20 тонн".

--- a/i18n/en/src/index.html
+++ b/i18n/en/src/index.html
@@ -149,24 +149,24 @@
             <ul class="list list_wide">
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/oil.svg" alt>
-                    <span>Maintenance ☆</span>
+                    <span>Maintenance ☆</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/car-repair.svg" alt>
-                    <span>Diagnostics ☆</span>
+                    <span>Diagnostics ☆</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/chassis.svg" alt>
-                    <span>Chassis ☆</span>
+                    <span>Chassis ☆</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/motor.svg" alt>
-                    <span>Engine ☆</span>
+                    <span>Engine ☆</span>
                 </li>
 
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/brake-disk.svg" alt>
-                    <span>Brakes ☆</span>
+                    <span>Brakes ☆</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/electrican.svg" alt>
@@ -429,11 +429,11 @@
             <ul class="list list_wide list_odd">
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/suspension.svg" alt>
-                    <span>lifts</span>
+                    <span>3 lifts</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/press.svg" alt>
-                    <span>press</span>
+                    <span>Press up to 20 tons</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/welding-machine.svg" alt>
