--- a/i18n/ka/src/index.html
+++ b/i18n/ka/src/index.html
@@ -149,24 +149,24 @@
             <ul class="list list_wide">
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/oil.svg" alt>
-                    <span>ტექნიკური მომსახურება ☆</span>
+                    <span>ტექნიკური მომსახურება ☆</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/car-repair.svg" alt>
-                    <span>დიაგნოსტიკა ☆</span>
+                    <span>დიაგნოსტიკა ☆</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/chassis.svg" alt>
-                    <span>ქვედა ნაწილი ☆</span>
+                    <span>ქვედა ნაწილი ☆</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/motor.svg" alt>
-                    <span>ძრავა ☆</span>
+                    <span>ძრავა ☆</span>
                 </li>
 
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/brake-disk.svg" alt>
-                    <span>მუხრუჭები ☆</span>
+                    <span>მუხრუჭები ☆</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/electrican.svg" alt>
@@ -429,11 +429,11 @@
             <ul class="list list_wide list_odd">
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/suspension.svg" alt>
-                    <span>lifts</span>
+                    <span>3 ამწე</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/press.svg" alt>
-                    <span>press</span>
+                    <span>პრესი 20 ტონამდე</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="..\../../img/welding-machine.svg" alt>
