--- a/i18n/src/index.html
+++ b/i18n/src/index.html
@@ -149,24 +149,24 @@
             <ul class="list list_wide">
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/oil.svg" alt>
-                    <span>Техническое обслуживание ☆</span>
+                    <span>Техническое обслуживание ☆</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/car-repair.svg" alt>
-                    <span>Диагностика ☆</span>
+                    <span>Диагностика ☆</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/chassis.svg" alt>
-                    <span>Ходовая ☆</span>
+                    <span>Ходовая ☆</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/motor.svg" alt>
-                    <span>Двигатель ☆</span>
+                    <span>Двигатель ☆</span>
                 </li>
 
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/brake-disk.svg" alt>
-                    <span>Тормоза ☆</span>
+                    <span>Тормоза ☆</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/electrican.svg" alt>
@@ -429,11 +429,11 @@
             <ul class="list list_wide list_odd">
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/suspension.svg" alt>
-                    <span>lifts</span>
+                    <span>3 подъёмника</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/press.svg" alt>
-                    <span>press</span>
+                    <span>Пресс до 20 тонн</span>
                 </li>
                 <li class="list_item">
                     <img class="list_item__img" src="../../img/welding-machine.svg" alt>
