Обновил локализацию в HTML и JSON файлах, изменил атрибуты языка для поддержки английского и грузинского, добавил классы для стилизации в соответствии с языком, улучшил структуру разметки и стили для лучшей читаемости и поддержки i18n.

--- a/i18n/ka/src/index.html
+++ b/i18n/ka/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ka">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body class="ka">
 
     <header class="header">
         <div class="img logo">
