--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html data-attr-t lang-t="lang">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body data-attr-t class-t="lang">
 
     <header class="header">
         <div class="img logo">
