--- a/i18n/en/src/index.html
+++ b/i18n/en/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body class="en">
 
     <header class="header">
         <div class="img logo">
