Добавил переключатель языков в HTML для всех языковых версий, обновил стили для улучшения отображения переключателя. Обновил пути к скриптам для поддержки новой функциональности.

--- a/i18n/ka/src/index.html
+++ b/i18n/ka/src/index.html
@@ -24,6 +24,11 @@
         </div>
         <div class="nav-contacts">
             <a class="sales-link" href="#sales">აქციები 🫰</a>
+            <div class="language-switcher">
+                <a href="/ru/" class="lang-link" data-lang="ru">RU</a>
+                <a href="/ka/" class="lang-link" data-lang="ka">KA</a>
+                <a href="/en/" class="lang-link" data-lang="en">EN</a>
+            </div>
             <ul class="contacts_icons">
                 <li class="contacts_icon">
                     <a href="https://www.instagram.com/sto_batumi/">
@@ -577,6 +582,7 @@
     <!-- Initialize Swiper -->
 
     <script defer src="/src/script.js"></script>
+    <script defer src="/src/language.js"></script>
 </body>
 
 </html>
