--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,11 @@
             <a class="sales-link" href="#sales" data-t="sales_and_discounts_header">
                 Акции 🫰
             </a>
+            <div class="language-switcher">
+                <a href="/ru/" class="lang-link" data-lang="ru">RU</a>
+                <a href="/ka/" class="lang-link" data-lang="ka">KA</a>
+                <a href="/en/" class="lang-link" data-lang="en">EN</a>
+            </div>
             <ul class="contacts_icons">
                 <li class="contacts_icon">
                     <a href="https://www.instagram.com/sto_batumi/">
@@ -646,6 +651,7 @@
     <!-- Initialize Swiper -->
 
     <script defer src="/src/script.js"></script>
+    <script defer src="/src/language.js"></script>
 </body>
 
 </html>
