--- a/i18n/ru/index.html
+++ b/i18n/ru/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 
     <link rel="stylesheet" href="/src/style.css">
+    
+    <base href="/">
 
 </head>
 
