Добавил ссылку на фавикон в index.html для улучшения визуального представления сайта в браузере. Это позволяет пользователям легче идентифицировать вкладку с нашим сайтом.

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="/src/style.css" />
 
+    <link rel="icon" href="/src/img/favicon.svg" type="image/svg+xml">
+
 </head>
 
 <body data-attr-t class-t="lang">
