Добавил ссылку на фавикон в файлы index.html для языков en, ka и ru, что улучшает визуальное представление сайта в браузере и помогает пользователям легче идентифицировать вкладку с нашим сайтом. Добавил бэк для акций

--- a/src/ka.index.html
+++ b/src/ka.index.html
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" href="/src/style.css">
 
+    <link rel="icon" href="/src/img/favicon.svg" type="image/svg+xml">
+
 </head>
 
 <body class="ka">
