Обновил зависимости в package-lock.json, добавил новый скрипт promotions.js в index.html и изменил текст в грузинском языке для поля "save_up_to". Это улучшает функциональность приложения и поддерживает многоязычность.

--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@
             <h2>
                 <span data-t="sales_and_discounts">Акции и скидки</span>
             </h2>
-            <ul class="list list_wide">
+            <ul class="list list_wide" id="promotions-list">
                 <li class="list_item">
                     <img class="list_item__img" src="/src/img/pig.svg" alt="">
                     <span data-t="cashback_cards">Карты кэшбека</span>
@@ -654,6 +654,7 @@
 
     <script defer src="/src/script.js"></script>
     <script defer src="/src/language.js"></script>
+    <script defer src="/src/promotions.js"></script>
 </body>
 
 </html>
