Refactor code structure for improved readability and maintainability

--- a/src/index.html
+++ b/src/index.html
@@ -561,7 +561,74 @@
             </ul>
         </div>
     </div>
-    <div class="section section__contacts section__white" id="contacts">
+    <div class="section section__team section__white">
+        <div class="img photo photo__vecher_box">
+            <picture>
+                <source media="(max-width: 768px)" srcset="/src/img/ключ.jpg">
+                <img src="/src/img/ключ.jpg" alt="ключ">
+            </picture>
+        </div>
+        <div class="content content_wide animate-once" data-delay="0.4s">
+            <h2 data-t="team">Наша команда</h2>
+            <div class="team-grid">
+                <div class="team-member">
+                    <img src="/src/img/team/я.jpg" alt="Владислав Аблиганец">
+                    <h3>Владислав Аблиганец</h3>
+                    <p>Директор Автосервиса</p>
+                </div>
+                <div class="team-member">
+                    <img src="/src/img/team/Арсен Каримов - Директор Магазина запчастей.jpg" alt="Арсен Каримов">
+                    <h3>Арсен Каримов</h3>
+                    <p>Директор Магазина запчастей</p>
+                </div>
+                <div class="team-member">
+                    <img src="/src/img/team/Софико Метревели - Заместитель Директора.jpg" alt="Софико Метревели">
+                    <h3>Софико Метревели</h3>
+                    <p>Заместитель Директора</p>
+                </div>
+                <div class="team-member">
+                    <img src="/src/img/team/Владимир Кудрявцев -  Мастер-приёмщик.jpg" alt="Владимир Кудрявцев">
+                    <h3>Владимир Кудрявцев</h3>
+                    <p>Мастер-приёмщик</p>
+                </div>
+                <div class="team-member">
+                    <img src="/src/img/team/Максим Володин - запчастист.jpg" alt="Максим Володин">
+                    <h3>Максим Володин</h3>
+                    <p>Запчастист</p>
+                </div>
+                <div class="team-member">
+                    <img src="/src/img/team/Александр Толкачев - Механик (Ходовая, ДВС).jpg" alt="Александр Толкачев">
+                    <h3>Александр Толкачев</h3>
+                    <p>Механик (Ходовая, ДВС)</p>
+                </div>
+                <div class="team-member">
+                    <img src="/src/img/team/Арчил Шаинидзе - Механик (универсал).jpg" alt="Арчил Шаинидзе">
+                    <h3>Арчил Шаинидзе</h3>
+                    <p>Механик (универсал)</p>
+                </div>
+                <div class="team-member">
+                    <img src="/src/img/team/Владислав Тихомиров - Механик (армотурные работы).jpg" alt="Владислав Тихомиров">
+                    <h3>Владислав Тихомиров</h3>
+                    <p>Механик (армотурные работы)</p>
+                </div>
+                <div class="team-member">
+                    <img src="/src/img/team/Сергей Дикий - Механик (Диагност, двигатели).jpg" alt="Сергей Дикий">
+                    <h3>Сергей Дикий</h3>
+                    <p>Механик (Диагност, двигатели)</p>
+                </div>
+                <div class="team-member">
+                    <img src="/src/img/team/Сергей Куликов (Ходовая часть).jpg" alt="Сергей Куликов">
+                    <h3>Сергей Куликов</h3>
+                    <p>Механик (Ходовая часть)</p>
+                </div>
+            </div>
+            <div class="team-photos">
+                <img src="/src/img/team/Фото команды 1.jpg" alt="Фото команды 1">
+                <img src="/src/img/team/Фото команды 2.jpg" alt="Фото команды 2">
+            </div>
+        </div>
+    </div>
+    <div class="section section__contacts " id="contacts">
         <div class="img photo photo__ruka">
             <picture>
                 <source media="(max-width: 768px)" srcset="/src/img/рука_с_визиткой-mob.jpg">
