feat: Add mechanic animation preview and update HTML structure
- Created a new HTML file for mechanic animation preview with layered images.
- Implemented a Python script to generate the preview HTML dynamically based on available images.
- Added multiple image layers for the mechanic animation.
- Updated index.html to include a new hero section with comprehensive car maintenance information.
- Enhanced localization files with new keys for the hero section.
- Improved CSS styles for the hero section and mechanic animation layers.
- Added new image assets for the mechanic animation.

--- a/src/index.html
+++ b/src/index.html
@@ -67,13 +67,56 @@
             </div>
         </div>
     </header>
+    <div class="section section__hero section__white">
+        <div class="content animate-once content_hero">
+            <div class="hero__title-wrapper">
+                <h1 class="hero__title">
+                    <span data-t="complex_maintenance">Комплексное техническое обслуживание автомобиля</span>
+                </h1>
+                <span class="hero__subtitle" data-t="just_enjoy_driving">Вам остаётся просто наслаждаться вождением</span>
+                <div class="button button_hero">
+                    <a href="#contacts" data-t="make_appointment">Записаться на обслуживание</a>
+                </div>
+            </div>
+        </div>
+        <div class="hero__img">
+            <picture class="mechanic-bg">
+                <source media="(max-width: 768px)" srcset="./img/Механик_0017_Background.png">
+                <img src="/src/img/Механик desktop.png" alt="сервис_сбоку" class="full mechanic-bg" loading="eager"
+                    fetchpriority="high" />
+            </picture>
+            <div class="mechanic-container">
+
+                <!-- <img src="./img/Механик_0017_Background.png" class="mechanic-bg" alt="Background"> -->
+                <img src="./img/Layer 1.png" class="mechanic-layer mech-layer-1" alt="Layer 1">
+                <img src="./img/Layer 2.png" class="mechanic-layer mech-layer-2" alt="Layer 2">
+                <img src="./img/Layer 3.png" class="mechanic-layer mech-layer-3" alt="Layer 3">
+                <img src="./img/Layer 4.png" class="mechanic-layer mech-layer-4" alt="Layer 4">
+                <img src="./img/Layer 5.png" class="mechanic-layer mech-layer-5" alt="Layer 5">
+                <img src="./img/Layer 6.png" class="mechanic-layer mech-layer-6" alt="Layer 6">
+                <img src="./img/Layer 7.png" class="mechanic-layer mech-layer-7" alt="Layer 7">
+                <img src="./img/Layer 8.png" class="mechanic-layer mech-layer-8" alt="Layer 8">
+                <img src="./img/Layer 9.png" class="mechanic-layer mech-layer-9" alt="Layer 9">
+                <img src="./img/Layer 10.png" class="mechanic-layer mech-layer-10" alt="Layer 10">
+                <img src="./img/Layer 11.png" class="mechanic-layer mech-layer-11" alt="Layer 11">
+                <img src="./img/Layer 12.png" class="mechanic-layer mech-layer-12" alt="Layer 12">
+                <img src="./img/Layer 13.png" class="mechanic-layer mech-layer-13" alt="Layer 13">
+                <img src="./img/Layer 14.png" class="mechanic-layer mech-layer-14" alt="Layer 14">
+                <img src="./img/Layer 15.png" class="mechanic-layer mech-layer-15" alt="Layer 15">
+                <img src="./img/Layer 16.png" class="mechanic-layer mech-layer-16" alt="Layer 16">
+                <img src="./img/Layer 17.png" class="mechanic-layer mech-layer-17" alt="Layer 17">
+                <img src="./img/Layer 18.png" class="mechanic-layer mech-layer-18" alt="Layer 18">
+            </div>
+        </div>
+
+    </div>
     <div class="section section__main section__white">
         <div class="img photo photo__servis_sboku image-wrapper">
             <picture>
                 <source media="(max-width: 768px)" srcset="/src/img/сервис_сбоку-mob.jpg">
-                <img src="/src/img/сервис_сбоку-mob-preview.jpg" alt="сервис сбоку предварительный просмотр"
-                    aria-hidden="true" class="preview" />
-                <img src="/src/img/сервис_сбоку.jpg" alt="сервис_сбоку" class="full" loading="eager"
+                <!-- <img src="/src/img/сервис_сбоку-mob-preview.jpg" alt="сервис сбоку предварительный просмотр"
+                    aria-hidden="true" class="preview" /> -->
+                <img src="/src/img/сервис_сбоку.jpg" alt="сервис_сбоку" loading="eager"
                     fetchpriority="high" />
             </picture>
         </div>
@@ -91,7 +134,7 @@
             <ul class="list number">
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="3000">
-                        7000+
+                        10000+
                     </div>
                     <div class="number_text">
                         <span data-t="successful_repairs">успешных ремонтов</span>
@@ -107,7 +150,7 @@
                 </li>
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="2000" data-t="years_in_batumi">
-                        3 года
+                        4 года
                     </div>
                     <div class="number_text">
                         <span data-t="in_batumi">в Батуми</span>
@@ -595,6 +638,7 @@
                 <div class="divider"></div>
 
                 <div class="contacts_text" data-t="social_networks">Наши соц. сети:</div>
+                <!-- <div class="contacts_text" data-t="social_networks">Напишите или позвоните любым удобным способом</div> -->
 
                 <ul class="contacts_icons">
                     <li class="contacts_icon">
