feat: Enhance SEO metadata and localization for improved visibility and user experience

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Автосервис Georgia Like Auto в Батуми. Ремонт печки, ходовой, двигателя, автоэлектрик. Качественный ремонт авто с гарантией." data-attr-t content-t="seo_description">
+    <meta name="keywords" content="автосервис батуми, ремонт авто батуми, ремонт печки батуми" data-attr-t content-t="seo_keywords">
+    
+    <!-- SEO & Open Graph -->
+    <meta name="robots" content="index, follow">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Georgia Like Auto" data-attr-t content-t="company_name">
+    <meta property="og:title" content="Автосервис Georgia Like Auto в Батуми | Ремонт печки, Двигателя, Ходовой" data-attr-t content-t="og_title">
+    <meta property="og:description" content="Автосервис Georgia Like Auto в Батуми. Ремонт печки, ходовой, двигателя, автоэлектрик. Качественный ремонт авто с гарантией." data-attr-t content-t="og_description">
+    <meta property="og:url" content="https://georgialikeauto.com/" data-attr-t content-t="og_url">
+    <meta property="og:image" content="/src/img/logo.png">
+    <meta property="og:locale" content="ru_RU" data-attr-t content-t="og_locale">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Автосервис Georgia Like Auto в Батуми | Ремонт печки, Двигателя, Ходовой" data-attr-t content-t="og_title">
+    <meta name="twitter:description" content="Автосервис Georgia Like Auto в Батуми. Ремонт печки, ходовой, двигателя, автоэлектрик. Качественный ремонт авто с гарантией." data-attr-t content-t="og_description">
+    <meta name="twitter:image" content="/src/img/logo.png">
+
+    <!-- Local SEO -->
+    <meta name="geo.region" content="GE-AJ">
+    <meta name="geo.placename" content="Batumi">
+    <meta name="geo.position" content="41.6256;41.6104">
+    <meta name="ICBM" content="41.6256, 41.6104">
+
+    <link rel="canonical" href="https://georgialikeauto.com/" data-attr-t href-t="og_url">
+
     <title data-t="title">Автосервис</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -259,6 +286,10 @@
                     <img class="list_item__img" src="/src/img/leak.svg" alt="">
                     <span data-t="leak_repair">Устранение течей</span>
                 </li>
+                <!-- <li class="list_item">
+                    <img class="list_item__img" src="/src/img/radiator.svg" alt="">
+                    <span data-t="heater_repair">Ремонт печки</span>
+                </li> -->
                 <li class="list_item">
                     <img class="list_item__img" src="/src/img/speedometer.svg" alt="">
                     <span data-t="interior">Разбор и сбор салона</span>
