--- a/src/index.html
+++ b/src/index.html
@@ -108,31 +108,31 @@
         </div>
         <div class="hero__img">
             <picture class="mechanic-bg">
-                <source media="(max-width: 768px)" srcset="./img/Механик_0017_Background.png">
+                <source media="(max-width: 768px)" srcset="/src/img/Механик_0017_Background.png">
                 <img src="/src/img/Механик desktop.png" alt="сервис_сбоку" class="full mechanic-bg" loading="eager"
                     fetchpriority="high" />
             </picture>
             <div class="mechanic-container">
 
-                <!-- <img src="./img/Механик_0017_Background.png" class="mechanic-bg" alt="Background"> -->
-                <img src="./img/Layer 1.png" class="mechanic-layer mech-layer-1" alt="Layer 1">
-                <img src="./img/Layer 2.png" class="mechanic-layer mech-layer-2" alt="Layer 2">
-                <img src="./img/Layer 3.png" class="mechanic-layer mech-layer-3" alt="Layer 3">
-                <img src="./img/Layer 4.png" class="mechanic-layer mech-layer-4" alt="Layer 4">
-                <img src="./img/Layer 5.png" class="mechanic-layer mech-layer-5" alt="Layer 5">
-                <img src="./img/Layer 6.png" class="mechanic-layer mech-layer-6" alt="Layer 6">
-                <img src="./img/Layer 7.png" class="mechanic-layer mech-layer-7" alt="Layer 7">
-                <img src="./img/Layer 8.png" class="mechanic-layer mech-layer-8" alt="Layer 8">
-                <img src="./img/Layer 9.png" class="mechanic-layer mech-layer-9" alt="Layer 9">
-                <img src="./img/Layer 10.png" class="mechanic-layer mech-layer-10" alt="Layer 10">
-                <img src="./img/Layer 11.png" class="mechanic-layer mech-layer-11" alt="Layer 11">
-                <img src="./img/Layer 12.png" class="mechanic-layer mech-layer-12" alt="Layer 12">
-                <img src="./img/Layer 13.png" class="mechanic-layer mech-layer-13" alt="Layer 13">
-                <img src="./img/Layer 14.png" class="mechanic-layer mech-layer-14" alt="Layer 14">
-                <img src="./img/Layer 15.png" class="mechanic-layer mech-layer-15" alt="Layer 15">
-                <img src="./img/Layer 16.png" class="mechanic-layer mech-layer-16" alt="Layer 16">
-                <img src="./img/Layer 17.png" class="mechanic-layer mech-layer-17" alt="Layer 17">
-                <img src="./img/Layer 18.png" class="mechanic-layer mech-layer-18" alt="Layer 18">
+                <!-- <img src="/src/img/Механик_0017_Background.png" class="mechanic-bg" alt="Background"> -->
+                <img src="/src/img/Layer 1.png" class="mechanic-layer mech-layer-1" alt="Layer 1">
+                <img src="/src/img/Layer 2.png" class="mechanic-layer mech-layer-2" alt="Layer 2">
+                <img src="/src/img/Layer 3.png" class="mechanic-layer mech-layer-3" alt="Layer 3">
+                <img src="/src/img/Layer 4.png" class="mechanic-layer mech-layer-4" alt="Layer 4">
+                <img src="/src/img/Layer 5.png" class="mechanic-layer mech-layer-5" alt="Layer 5">
+                <img src="/src/img/Layer 6.png" class="mechanic-layer mech-layer-6" alt="Layer 6">
+                <img src="/src/img/Layer 7.png" class="mechanic-layer mech-layer-7" alt="Layer 7">
+                <img src="/src/img/Layer 8.png" class="mechanic-layer mech-layer-8" alt="Layer 8">
+                <img src="/src/img/Layer 9.png" class="mechanic-layer mech-layer-9" alt="Layer 9">
+                <img src="/src/img/Layer 10.png" class="mechanic-layer mech-layer-10" alt="Layer 10">
+                <img src="/src/img/Layer 11.png" class="mechanic-layer mech-layer-11" alt="Layer 11">
+                <img src="/src/img/Layer 12.png" class="mechanic-layer mech-layer-12" alt="Layer 12">
+                <img src="/src/img/Layer 13.png" class="mechanic-layer mech-layer-13" alt="Layer 13">
+                <img src="/src/img/Layer 14.png" class="mechanic-layer mech-layer-14" alt="Layer 14">
+                <img src="/src/img/Layer 15.png" class="mechanic-layer mech-layer-15" alt="Layer 15">
+                <img src="/src/img/Layer 16.png" class="mechanic-layer mech-layer-16" alt="Layer 16">
+                <img src="/src/img/Layer 17.png" class="mechanic-layer mech-layer-17" alt="Layer 17">
+                <img src="/src/img/Layer 18.png" class="mechanic-layer mech-layer-18" alt="Layer 18">
             </div>
         </div>
 
