feat: Integrate Google Tag Manager for enhanced tracking and update SEO metadata for improved visibility

--- a/src/index.html
+++ b/src/index.html
@@ -2,25 +2,43 @@
 <html data-attr-t lang-t="lang">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17780051605"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-17780051605');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Автосервис Georgia Like Auto в Батуми. Ремонт печки, ходовой, двигателя, автоэлектрик. Качественный ремонт авто с гарантией." data-attr-t content-t="seo_description">
-    <meta name="keywords" content="автосервис батуми, ремонт авто батуми, ремонт печки батуми" data-attr-t content-t="seo_keywords">
-    
+    <meta name="description"
+        content="Автосервис Georgia Like Auto в Батуми. Ремонт печки, ходовой, двигателя, автоэлектрик. Качественный ремонт авто с гарантией."
+        data-attr-t content-t="seo_description">
+    <meta name="keywords" content="автосервис батуми, ремонт авто батуми, ремонт печки батуми" data-attr-t
+        content-t="seo_keywords">
+
     <!-- SEO & Open Graph -->
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Georgia Like Auto" data-attr-t content-t="company_name">
-    <meta property="og:title" content="Автосервис Georgia Like Auto в Батуми | Ремонт печки, Двигателя, Ходовой" data-attr-t content-t="og_title">
-    <meta property="og:description" content="Автосервис Georgia Like Auto в Батуми. Ремонт печки, ходовой, двигателя, автоэлектрик. Качественный ремонт авто с гарантией." data-attr-t content-t="og_description">
+    <meta property="og:title" content="Автосервис Georgia Like Auto в Батуми | Ремонт печки, Двигателя, Ходовой"
+        data-attr-t content-t="og_title">
+    <meta property="og:description"
+        content="Автосервис Georgia Like Auto в Батуми. Ремонт печки, ходовой, двигателя, автоэлектрик. Качественный ремонт авто с гарантией."
+        data-attr-t content-t="og_description">
     <meta property="og:url" content="https://georgialikeauto.com/" data-attr-t content-t="og_url">
     <meta property="og:image" content="/src/img/logo.png">
     <meta property="og:locale" content="ru_RU" data-attr-t content-t="og_locale">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Автосервис Georgia Like Auto в Батуми | Ремонт печки, Двигателя, Ходовой" data-attr-t content-t="og_title">
-    <meta name="twitter:description" content="Автосервис Georgia Like Auto в Батуми. Ремонт печки, ходовой, двигателя, автоэлектрик. Качественный ремонт авто с гарантией." data-attr-t content-t="og_description">
+    <meta name="twitter:title" content="Автосервис Georgia Like Auto в Батуми | Ремонт печки, Двигателя, Ходовой"
+        data-attr-t content-t="og_title">
+    <meta name="twitter:description"
+        content="Автосервис Georgia Like Auto в Батуми. Ремонт печки, ходовой, двигателя, автоэлектрик. Качественный ремонт авто с гарантией."
+        data-attr-t content-t="og_description">
     <meta name="twitter:image" content="/src/img/logo.png">
 
     <!-- Local SEO -->
@@ -100,7 +118,8 @@
                 <h1 class="hero__title">
                     <span data-t="complex_maintenance">Комплексное техническое обслуживание автомобиля</span>
                 </h1>
-                <span class="hero__subtitle" data-t="just_enjoy_driving">Вам остаётся просто наслаждаться вождением</span>
+                <span class="hero__subtitle" data-t="just_enjoy_driving">Вам остаётся просто наслаждаться
+                    вождением</span>
                 <div class="button button_hero">
                     <a href="#contacts" data-t="make_appointment">Записаться на обслуживание</a>
                 </div>
@@ -143,8 +162,7 @@
                 <source media="(max-width: 768px)" srcset="/src/img/сервис_сбоку-mob.jpg">
                 <!-- <img src="/src/img/сервис_сбоку-mob-preview.jpg" alt="сервис сбоку предварительный просмотр"
                     aria-hidden="true" class="preview" /> -->
-                <img src="/src/img/сервис_сбоку.jpg" alt="сервис_сбоку" loading="eager"
-                    fetchpriority="high" />
+                <img src="/src/img/сервис_сбоку.jpg" alt="сервис_сбоку" loading="eager" fetchpriority="high" />
             </picture>
         </div>
         <div class="content animate-once">
